--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.home</groupId>
   <artifactId>learn.mvn</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <version>0.0.2</version>
+  <modules>
+    <module>base</module>
+  </modules>
+  <packaging>pom</packaging>
 
   <name>learn.mvn</name>
   <url>http://maven.apache.org</url>
@@ -21,4 +23,20 @@
       <version>4.12</version>
     </dependency>
   </dependencies>
+
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <url>https://github.com/pgciq/learnMvn</url>
+    <connection>scm:git:git://git@github.com:pgciq/learnMvn.git</connection>
+    <developerConnection>scm:git:git://git@github.com:pgciq/learnMvn.git</developerConnection>
+    <tag>learn.mvn-0.0.2</tag>
+  </scm>
 </project>
+
