--- a/pom.xml
+++ b/pom.xml
@@ -1,60 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.home</groupId>
-    <artifactId>learn.mvn</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+  <groupId>com.home</groupId>
+  <artifactId>learn.mvn</artifactId>
+  <version>0.0.2-SNAPSHOT</version>
+  <modules>
+    <module>base</module>
+  </modules>
+  <packaging>pom</packaging>
 
-    <modules>
-        <module>base</module>
-    </modules>
-    <packaging>pom</packaging>
+  <name>learn.mvn</name>
+  <url>http://maven.apache.org</url>
 
-    <name>learn.mvn</name>
-    <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
+  </dependencies>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-    </dependencies>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
-    <scm>
-        <url>https://github.com/pgciq/learnMvn</url>
-        <connection>scm:git:git@github.com:pgciq/learnMvn.git</connection>
-        <developerConnection>scm:git:git@github.com:pgciq/learnMvn.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.3</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>nexus-releases</serverId>
-                    <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
-                    <skipStaging>true</skipStaging>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+  <scm>
+    <url>https://github.com/pgciq/learnMvn</url>
+    <connection>scm:git:git@github.com:pgciq/learnMvn.git</connection>
+    <developerConnection>scm:git:git@github.com:pgciq/learnMvn.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 </project>
 
