--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,25 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>external.atlassian.jgitflow</groupId>
+        <artifactId>jgitflow-maven-plugin</artifactId>
+        <version>1.0-m5.1</version>
+        <configuration>
+          <pushReleases>true</pushReleases>
+          <keepBranch>false</keepBranch>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <noTag>true</noTag>
+          <allowUntracked>true</allowUntracked>
+          <pullDevelop>true</pullDevelop>
+          <pullMaster>true</pullMaster>
+          <allowSnapshots>true</allowSnapshots>
+          <flowInitContext>
+            <masterBranchName>master-test</masterBranchName>
+            <developBranchName>deploy-test</developBranchName>
+          </flowInitContext>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
