--- a/pom.xml
+++ b/pom.xml
@@ -60,33 +60,33 @@
           </flowInitContext>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.maven.scm</groupId>
-            <artifactId>maven-scm-provider-gitexe</artifactId>
-            <version>1.8.1</version>
-          </dependency>
-        </dependencies>
-        <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-          <tagNameFormat>v@{project.version}</tagNameFormat>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.3</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>nexus-releases</serverId>
-          <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
-          <skipStaging>true</skipStaging>
-        </configuration>
-      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-release-plugin</artifactId>-->
+        <!--<version>2.5.3</version>-->
+        <!--<dependencies>-->
+          <!--<dependency>-->
+            <!--<groupId>org.apache.maven.scm</groupId>-->
+            <!--<artifactId>maven-scm-provider-gitexe</artifactId>-->
+            <!--<version>1.8.1</version>-->
+          <!--</dependency>-->
+        <!--</dependencies>-->
+        <!--<configuration>-->
+          <!--<autoVersionSubmodules>true</autoVersionSubmodules>-->
+          <!--<tagNameFormat>v@{project.version}</tagNameFormat>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+        <!--<groupId>org.sonatype.plugins</groupId>-->
+        <!--<artifactId>nexus-staging-maven-plugin</artifactId>-->
+        <!--<version>1.6.3</version>-->
+        <!--<extensions>true</extensions>-->
+        <!--<configuration>-->
+          <!--<serverId>nexus-releases</serverId>-->
+          <!--<nexusUrl>http://localhost:8081/nexus/</nexusUrl>-->
+          <!--<skipStaging>true</skipStaging>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
     </plugins>
   </build>
 </project>
